--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ body {
   background-color: #f2f2f2;
     font-family: "Lato";
     font-weight: 300;
-    font-size: 16px;
+    font-size: px;
     color: #555;
     padding-top: 50px;
 
@@ -74,19 +74,19 @@ a:after {
 #headerwrap {
     /*background: url('../img/apartment3.jpg');*/
 	background-color: #2b323c;
-	padding-top: 10px;
+	padding-top: 3px;
 }
 
 #headerwrap h1 {
-	margin-top: 10px;
+	margin-top: 3px;
 	color: white;
-	font-size: 70px;
+	font-size: 10px;
 	
 }
 
 #headerwrap h3 {
 	color: white;
-	font-size: 30px;
+	font-size: 3px;
 }
 
 #headerwrap h5 {
