--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -987,7 +987,7 @@ a:focus {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  background-color: #ffffff;
+  background-color: #d7e7e8;
   padding: 7px 10px;
   border-bottom: 1px solid #f4f4f4;
   color: #444444;
@@ -2991,6 +2991,7 @@ table.text-center th {
  */
 .modal {
   background: rgba(0, 0, 0, 0.3);
+   
 }
 .modal-content {
   border-radius: 0;
